precompiles/macro/tests/compile-fail/precompile/pre-check/wrong-parameter.stderr
error: This parameter must have type `&mut impl PrecompileHandle`
  --> tests/compile-fail/precompile/pre-check/wrong-parameter.rs:26:18
   |
26 |     fn pre_check(_: u32) {
   |                     ^^^
